# oracc

./: .gitignore  BOOTSTRAP  BUILD-SERVER  Makefile.am  ORACC-INSTALL  ORACC_BASH  README  README.md  SETUP.md  TODO  XMLRPC  acconfig.h  aclocal.m4  am-cflags.txt  aws.notes  boot-projects.sh  centos6-minimal-yum.sh  config.h.in  configure  configure.ac  create-oracc-vhost-conf.sh  create_oracclocale_h.sh  diff-in.plx  dist.lst  err  fix-oracc-path.sh  fix-oracc-path.sh.in  force-bash.sh  ga4-tag-http.txt  gperf-size_t.sh  gvl-ogsl-needs-uncomp.plx  httpduser.sh  install-oracc-vhost-conf.sh  lnx-config.sh  mac-config.sh  mac-config.sh.in  mac-reconfig.sh  macos-big-sur-httpd.conf  make-shell-bash.sh  makeinstall.sh  (+58 more)
c/l2/: Makefile.am  NEW.txt  cofs-and-psus.txt  err  harvest-merge.txt  l2.h  log  roadmap-2011-01-14.txt  sux.xml  test.xtf
c/lib/: Makefile.am  liboracc.c
c/p3/: Makefile.am  gdb.sh  less  oracc  oracc.c  p3  p3-ce-HTML.xsl  p3-htmlview.xsl  p3-pager.plx  p3-pager.plx.in  p3-project-data.plx  p3-project.sh  p3-project.xsl  p3-template.xml  p3-xmd-div.xsl  p3-xmd-div.xsl.in  p3.c  p3.css  p3.js  t  test.sh
doc/: Makefile.am  colophon.txt  index.html  install.sh
doc/00tools/: Makefile.am  checkdoc.sh  dirname.xsl  docperms.sh  estindex.sh  mk-index-html.sh  mk-index.plx  mk-index.xsl
doc/builder/: Makefile.am  atfpages.txt  index.xml  index00.xml  nohup.out  x  x.xml
doc/developer/: Makefile.am  doco.txt  index.xml  log
doc/install/: Makefile.am  index.html
doc/manager/: Makefile.am  index.xml  install.sh
doc/ns/: Makefile.am  index.xml  install.sh  nohup.out
doc/ood/: Makefile  Makefile.am  blog  ood.xdf
doc/steerer/: install.sh  steerer.txt
doc/sysadmin/: Makefile.am  crontab.cdli  crontab.root  mac-oracc-webserver.txt  oracc-bootstrap.txt  oracc-eXist.txt  oracc-estraier.txt  oracc-nightlies.txt  oracc-piwik.txt  oracc-preparation.txt  oracc-restore.txt  oracc-tomcat.txt  oracc-webserver.txt  oracc-xetex.txt  order.txt  passwordless.txt  sysadmin.txt  tmp-prep
doc/urn/: planning.txt
doc/user/: Makefile.am  index.html  index.xml  install.sh
doc/wwwhome/: 404.html  Makefile.am  atfproc.html  atftemplate.html  contributing.html  corpus.html  how-and-why.html  install.sh  oraccbuttonbar.css  oraccdoc.css  oracchome.css  readme.html  voltemplate.html  webservices.html
misc/: Makefile.am  espd2  p3-corpusview-lib-wrapper.xsl
misc/admin/: Makefile.am  OID.pm  all-hubs.sh  allprojatf.sh  allprojlist.sh  apply-oracc-resources.sh  apply-oracc.sh  backup-list.plx  bootstrap.sh  build-all.sh  build-umbrella.sh  build-with-subs.sh  config-check.plx  config-options.xsl  config-rng-doco.xsl  dmg.sh  dmg.sh.in  full-backup.sh.in  grepatf.sh  home-full-back.sh  incr-backup.sh.in  install-tar.sh.in  installed.sh  list-all-subs.sh  list-pub-subs.sh  list-subprojects.sh  oid.plx  oracc-index-runtime.sh  oracc-install-funcs.sh  oracc-install-runtime.sh  oracc-install-server.sh  oracc-install-single.sh  oracc-install-web.sh  oracc-install.sh  oracc-preview.sh  oracc-project-data.sh  oracc-project-runtime.sh  oracc-project-sources.sh  oracc-publish.sh  oracc-send.sh  (+65 more)
misc/agg/: Makefile.am  agg-editions.sh  agg-html-projects.xsl  agg-index.xsl  agg-linkbase.sh  agg-list-all-projects.sh  agg-list-public-projects.sh  agg-list-public-projects.xsl  agg-master-xtl.plx  agg-project-dates.plx  agg-project-list.sh  agg-projects-json.plx  agg-proxify.plx  agg-proxify.plx.in  agg-public-image.xsl  agg-public-projects.xsl  agg-test.sh  agg-thumbs.sh  url.xsl
misc/atf/: Makefile.am  OX4.pm  Unicode.pm  acc2num.plx  addspacer.plx  apply-strip-extra.sh  atf-add-after.plx  atf-apply-p-fix.sh  atf-cdli.sh  atf-common.sh  atf-fix-lem.plx  atf-fix-n.plx  atf-fix-uni.plx  atf-igigal.plx  atf-inline-linksets.plx  atf-langify.plx  atf-lem-nolem.plx  atf-strip-sux-extra.plx  atf-uni-lem.plx  atf2ascii.plx.in  atf2uni.plx  atfandlines.plx  atfbatch.plx  atfcat.plx  atfchunk.plx  atfcomment.plx  atfdroppq.plx.in  atffix-p.plx  atfglobal.plx  atfgrabpq.plx  atfhalf.plx  atfhavelem.plx  atfid.plx.in  atfinstall.plx  atfjoin.plx  atflemfix.plx  atflists.plx  atfmap.plx  atfnewlines.plx  atfnewnum.plx  (+51 more)
misc/bib/: CMS_A-HTML-driver.xsl  CMS_A-HTML-each.xsl  CMS_A-HTML-embedded.xsl  CMS_A-HTML.xsl  CiteResolver.pm  Config.pm  Index.pm  Indexer.pm  KeyMangler.pm  Makefile.am  QueryContext.pm  addsigs.xsl  bib-reflist.css  bibdbdump.plx.in  biblcgi.plx.in  biblcites.plx.in  biblindex.plx.in  biblist.xsl  biblquery.plx.in  biblsort.sh.in  bibltext.plx  bibltoxml.plx  cite-note-TEXT.xsl  ckey-abbrevs.xsl  ckey-namedate.xsl  ckey-numbers.xsl  common.xml  fixnamemap.plx.in  fixnames.plx  harvest-names.xsl  jrnser.xml  map-jrnser.xsl  map-name-fuzzy.xsl  map-name.xsl  merge-names.xsl  name-key.xsl  names-pre-fixmap.xml  names.xml  onames.xml  ref2tei.sh.in  (+10 more)
misc/catf/: CATF.pm  Makefile.am  XXX  atf2catf.sh  catf-aliases.xml  catf-fixer.plx  catf-manager.plx  gdl-ATF.xsl  gdl-CATF.xsl  gdl-FRAGS.xsl  gdl-OATF.xsl  oatf-manager.plx  xsf-Q-to-P.xsl  xsf-unpack-P.plx  xtf-CATF.xsl  xtf-FRAGS.xsl  xtf-OATF.xsl  xtf-TATF.xsl  xxxbits
misc/cbd/: ATF.pm  BaseSigs.pm  Bases.pm  C11e.pm  Collo.pm  Compare.pm  Corpus.pm  Edit.pm  Entries.pm  Equivs.pm  FBM.pm  Fix.pm  Forms.pm  Geonames.pm  Guess.pm  Hash.pm  History.pm  LANG_SUPPORT.txt  Makefile.am  Map.pm  NN-normalize.plx  OID.pm  PPWarn.pm  Props.pm  README  README.txt  SLStats.pm  Senses.pm  Sigs.pm  Sort.pm  SuxNorm.pm  Util.pm  Validate.pm  Words.pm  XML.pm  art-HTML-div.xsl  art2div.sh  base-audit.plx  (+114 more)
oracc-hyperestraier/: ChangeLog  Makefile.am  README  THANKS  dbi2est.plx  estbutler.c  estcall.c  estcmd.c  estconfig.in  estfraud.c  estfraud.conf  estload.c  estmaster.c  estmtdb.h  estmttest.c  estnode.c  estnode.h  estproxy.c  estproxy.conf  estraier.c  estraier.h  estraier.idl  estresult.dtd  estscout.c  estscout.conf  estseek-form.html  estseek-frame.html  estseek.c  estseek.c.in  estseek.conf  estseek.conf.in  estseek.help  estseek.tmpl  estsupt.c  estsupt.conf  estwaver.c  estwolefind  hyperestraier.pc.in  log  mastermod.c  (+9 more)
(+4263 files in other folders)
