## Process this file with automake to produce Makefile.in
##
#  Copyright(c) Pennsylvania Sumerian Dictionary and Steve Tinney
#  1997 under the GNU General Public License (see /psd/COPYING).
# 
#  $Id: Makefile.am,v 1.1 1998/11/05 03:00:29 s Exp s $

ACLOCAL_AMFLAGS=-I m4
SUBDIRS = oracc-hyperestraier c misc doc

EXTRA_DIST=oracc-subst.sh oracc-am-rules.txt
