SUBDIRS =
	./ood/resources \
	./ood/urns \
	./ood/uris \
	./ood/uri-text \
	./ood/uri-examples \
	./ood/uri-patterns \
	./ood/gdf \
	./ood \
	./builder/linganno/ARC \
	./builder/linganno/PEO \
	./builder/linganno \
	./builder/linganno/GRC \
	./builder/linganno/ELX \
	./builder/linganno/QPN \
	./builder/linganno/SUX \
	./builder/linganno/SUX/primer \
	./builder/linganno/SUX/syntax \
	./builder/linganno/AKK/akkstyle \
	./builder/linganno/AKK/akk-roots \
	./builder/linganno/AKK/akk-ob \
	./builder/linganno/AKK \
	./builder/l2/PSUs \
	./builder/l2/BFFs \
	./builder/l2/F2 \
	./builder/l2/howtouseit \
	./builder/l2/glossaries \
	./builder/l2/lem \
	./builder/l2/COFs \
	./builder/l2/lemsyntax \
	./builder/l2/howitworks \
	./builder/dates \
	./builder/labels \
	./builder/primer \
	./builder/metrology \
	./builder/layouts \
	./builder/quickref \
	./builder/numbers \
	./builder/translation \
	./builder/cdli \
	./builder/bilinguals \
	./builder/math \
	./builder/scores \
	./builder/emacs \
	./builder/emacs/emacsw32 \
	./builder/emacs/aquamacs \
	./install/prereqs \
	./install/neworacc \
	./install/basics \
	./install/ports \
	./developer/xdftut \
	./developer/psa \
	./developer/versions \
	./developer/l2 \
	./developer/l2/langtags \
	./developer/l2/howtouseit \
	./developer/l2/lemsyntax \
	./developer/l2/howitworks \
	./developer/exist/example1 \
	./developer/exist/projects \
	./developer/exist/example3 \
	./developer/exist/example4 \
	./developer/exist/install \
	./developer/exist/example2 \
	./developer/exist/example6 \
	./developer/exist/example7 \
	./developer/exist/example8 \
	./developer/exist/example5 \
	./developer/exist/starting \
	./developer/exist \
	./developer/tei \
	./developer/nsa \
	./developer/xmlarch \
	./developer/projweb \
	./developer/fxr/1.0 \
	./developer/opendocument \
	./developer/cuneify \
	./developer/uri \
	./manager/projects \
	./manager/portals/espimages \
	./manager/portals/espbuild \
	./manager/portals/esp \
	./manager/portals/esperrors \
	./manager/portals/espelements \
	./manager/portals/espcontent \
	./manager/portals/projurls \
	./manager/portals \
	./manager/portals/espsetup \
	./manager/the-oracc-command \
	./manager/projemacs \
	./manager/projunix \
	./manager/projlife \
	./manager/projcats \
	./manager/filesystem \
	./manager/proxies \
	./manager/webcolours \
	./manager/projconfig/c2/ol \
	./manager/projconfig/c2/colours \
	./manager/projconfig/c2/views \
	./manager/projconfig/c2/pll \
	./manager/projconfig/c2 \
	./manager/projconfig \
	./ns/xcl/1.0 \
	./ns/xmd/1.0 \
	./ns/cbd/2.0 \
	./ns/cbd/1.0 \
	./ns/xcf/1.0 \
	./ns/xtc/1.0 \
	./ns/cdf/1.0 \
	./ns/gdl/1.0 \
	./ns/sl/1.0 \
	./ns/esp/1.0 \
	./ns/xst/1.0 \
	./ns/xtr/1.0 \
	./ns/xdf/1.0 \
	./ns/xtf/1.0 \
	./ns/xse/1.0 \
	./user/userguide \
	./user/citing \
	./user/searching \
	./user/fonts \
	./user/p2 \
	./user/unicode \
	./user/glossaries \
	./user/keyboards \
	./user/fulltextsearch \
	./user/advanced
