SUBDIRS = \
	admin \
	agg \
	atf \
	bib \
	ce \
	cs \
	emacs \
	esp \
	est \
	fonts \
	fxr \
	g2plus \
	gdf \
	gdl \
	issl \
	l2common \
	l2phase1 \
	l2phase2 \
	l2phase3 \
	legacy \
	lib \
	log \
	msort \
	msv \
	nsa \
	o2 \
	ods \
	ol \
	oss2 \
	otf \
	p2 \
	print \
	ptb \
	saxon \
	schemas \
	se \
	sl \
	sma \
	ssa3 \
	system \
	tei \
	tex \
	texts \
	urn \
	util \
	version \
	web \
	www \
	xcf \
	xcl \
	xdf \
	xix \
	xmd \
	xpd2 \
	xse \
	xst \
	xtf \
	xtl \
	xtr \
	xvl
