SUBDIRS = \
	admin \
	agg \
	atf \
	bib \
	catf \
	ce \
	chi \
	cs \
	emacs \
	epsd \
	esp \
	esp2 \
	est \
	fonts \
	fxr \
	g2plus \
	gdl \
	issl \
	l2common \
	l2phase0 \
	l2phase1 \
	l2phase2 \
	l2phase3 \
	legacy \
	lib \
	log \
	msort \
	msv \
	nsa \
	o2 \
	ods \
	ol \
	ood \
	oss2 \
	otf \
	p3 \
	print \
	ptb \
	saxon \
	schemas \
	se \
	sl \
	sma \
	ssa3 \
	system \
	tei \
	tex \
	texts \
	urn \
	util \
	version \
	web \
	www \
	xcf \
	xcl \
	xdf \
	xix \
	xmd \
	xpd2 \
	xse \
	xst \
	xtf \
	xtl \
	xtr \
	xvl
