SUBDIRS = \
	admin \
	agg \
	atf \
	bib \
	catf \
	cbd \
	ce \
	chi \
	cs \
	emacs \
	epsd2 \
	esp \
	esp2 \
	est \
	fonts \
	fxr \
	g2plus \
	gdl \
	issl \
	json \
	l2common \
	l2phase0 \
	l2phase1 \
	l2phase2 \
	l2phase3 \
	legacy \
	lib \
	log \
	msort \
	msv \
	neo \
	nsa \
	oai \
	o2 \
	ods \
	oid \
	ol \
	ood \
	oss2 \
	otf \
	p3 \
	print \
	ptb \
	saxon \
	schemas \
	se \
	sl \
	sma \
	sma2 \
	ssa3 \
	system \
	tei \
	tex \
	texts \
	urn \
	util \
	version \
	web \
	www \
	xcf \
	xcl \
	xdf \
	xix \
	xmd \
	xpd2 \
	xse \
	xst \
	xtf \
	xtl \
	xtr \
	xvl

# epsd
