include ../../oracc-am-rules.txt

bin_SCRIPTS = agg-list-public-projects.sh agg-project-list.sh agg-thumbs.sh
scriptdata_DATA = agg-html-projects.xsl agg-index.xsl agg-list-public-projects.xsl agg-public-image.xsl agg-public-projects.xsl url.xsl

EXTRA_DIST = \
	agg-html-projects.xsl \
	agg-index.xsl \
	agg-list-public-projects.sh \
	agg-list-public-projects.xsl \
	agg-project-list.sh \
	agg-public-image.xsl \
	agg-public-projects.xsl \
	agg-thumbs.sh \
	url.xsl
